録画時のコメントデータの取得機能を追加。NormalVideoだけ生放送の時も使いそうなんだけど僕は使ったことないのでスルー
