# src/model/api/nicojk/INicoJKApiModel.ts
@@ -1,0 +1,4 @@
+import * as apid from '../../../../api';
+export default interface INicoJKApiModel {
+    getRecordedComments(recordedId: apid.RecordedId, isHalfWidth: boolean): Promise<apid.NicoJKComments | null>;
+}
